# mofatic

./: .gitignore  LICENSE  pyproject.toml
examples/: embedded.py  many2many.py  one2many.py  one2one.py
mofatic/: engine.py
mofatic/query/: base.py  boolop.py  compare.py  nested.py
