[tool.poetry]
name = "mofatic"
version = "0.1.0"
description = "Motor + FastAPI + Pydantic as MongoDB ODM library"
authors = ["Yan Kurbatov <deknowny@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
motor = "^2.4.0"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"
isort = "^5.9.1"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
